Added a robot emoji for the favicon
I got super lazy and didn't want to make a favicon.ico file

--- a/views/main.erb
+++ b/views/main.erb
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Minimalist Chat Bot</title>
+        <title>🤖 Minimalist Chat Bot</title>
         <link rel = 'stylesheet' href = '/css/main.css'>
     </head>
     <body>
         <div class="chat-container">
             <div class="header">
-                <h2>Chat Bot</h2>
+                <h2> SIC Bot </h2>
                 <div class = 'header-buttons'>
                     <button class = 'reset-button'> Reset </button>
                     <div class = "theme-toggle"> 🌙 </div>
